# zellij-sheets

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  REPOSITORY_GUIDELINES.md  test.csv
.github/workflows/: ci.yml
config/: config.toml
files/: CHANGES.md  layout.rs
layouts/: spreadsheet.kdl
scripts/: state_template.rs
src/: address.rs  config.rs  data_loader.rs  input.rs  layout.rs  lib.rs  main.rs  plugin.rs  state.rs  tui.rs  ui.rs
tests/: Cargo.toml  data_loader_tests.rs  state_tests.rs  thursday_corust.md  ui_tests.rs
