[package]
name = "zellij-sheets"
version = "0.1.0"
edition = "2021"
description = "Terminal-based spreadsheet viewer powered by Zellij"

[dependencies]
calamine = "0.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
thiserror = "2.0"
csv = "1.3"
zellij-tile = "0.44.0"
