[package]
name = "zellij-sheets"
version = "0.1.1"
edition = "2021"
default-run = "zellij-sheets"
description = "Terminal-based spreadsheet viewer powered by Zellij"
license = "AGPL-3.0-or-later"
repository = "https://github.com/crombojambo/zellij-sheets"
documentation = "https://docs.rs/zellij-sheets"
homepage = "https://github.com/crombojambo/zellij-sheets"
readme = "README.md"
keywords = ["zellij", "spreadsheet", "terminal", "csv", "xlsx"]
categories = ["command-line-utilities", "visualization", "wasm"]
include = [
    "src/**",
    "tests/*.rs",
    "layouts/*.kdl",
    "config/*.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[features]
default = []
plugin-smoke = []

[dependencies]
calamine = "0.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
thiserror = "2.0"
csv = "1.3"
zellij-tile = "0.44.0"
unicode-width = "0.2"

[[bin]]
name = "plugin-smoke"
path = "src/bin/plugin-smoke.rs"
required-features = ["plugin-smoke"]

[[bin]]
name = "plugin-state-smoke"
path = "src/bin/plugin-state-smoke.rs"
required-features = ["plugin-smoke"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-wasip1"]

[badges]
maintenance = { status = "experimental" }
